[workspace]
resolver = "2"
members = [
    "ferrotunnel-protocol",
    "ferrotunnel-common",
    "ferrotunnel",
    "ferrotunnel-core",
    "ferrotunnel-cli",
    "ferrotunnel-http",
    "ferrotunnel-plugin",
    "ferrotunnel-observability",

    # Internal (not published); fuzz lives under ferrotunnel-protocol/fuzz with its own [workspace]
    "tools/loadgen",
    "tools/soak",
    "tests",
    "examples",
    "benches",
]

[workspace.package]
version = "1.0.6"
edition = "2021"
rust-version = "1.90"
authors = ["Mitul Shah <shahmitul005@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferro-labs/ferrotunnel"
homepage = "https://github.com/ferro-labs/ferrotunnel"
description = "HTTP ingress and proxy for FerroTunnel"
keywords = ["tunnel", "http", "proxy", "ingress"]
categories = ["network-programming", "web-programming"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
bincode-next = { version = "2.0.4", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }

# Benchmarking
criterion = "0.8"

# Codec
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
ferrotunnel-observability = { version = "1.0.6", path = "ferrotunnel-observability" }

# High-performance allocator
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
strip = false

[profile.dev]
opt-level = 0
debug = true

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Pedantic lints - high quality code
pedantic = { level = "warn", priority = -1 }
# Specific pedantic lints to allow
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
single_match_else = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
match_same_arms = "allow"
needless_continue = "allow"
ignored_unit_patterns = "allow"
unnecessary_literal_bound = "allow"

# Restriction lints - catch common mistakes
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Performance lints
inefficient_to_string = "warn"
linkedlist = "warn"

# Style lints
module_name_repetitions = "allow"
