[package]
name = "ferrotunnel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core tunnel implementation for FerroTunnel"
keywords = ["tunnel", "networking", "async", "core"]
categories = ["network-programming", "asynchronous"]

[dependencies]
ferrotunnel-common = { version = "1.0.6", path = "../ferrotunnel-common" }
ferrotunnel-protocol = { version = "1.0.6", path = "../ferrotunnel-protocol" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1"
uuid = { workspace = true }
dashmap = "6.1"                   # Thread-safe map for sessions
futures = "0.3.31"
bytes = { workspace = true }

# TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pki-types = { version = "1.9", features = ["std"] }

# Auth hardening
thiserror = { workspace = true }
subtle = "2"
sha2 = "0.10"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"
rand = "0.8"

# Socket tuning for performance
socket2 = "0.6"

# High-performance async channels
kanal = "0.1"

# Lock-free object pooling
crossbeam-queue = "0.3"

# Optional metrics (decode/encode latency, queue depth)
ferrotunnel-observability = { version = "1.0.6", path = "../ferrotunnel-observability", optional = true }

[features]
default = []
metrics = ["dep:ferrotunnel-observability"]

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "transport"
harness = false

[[bench]]
name = "multiplexer"
harness = false

[[bench]]
name = "batched_sender"
harness = false

[lints]
workspace = true
