[package]
name = "ferrotunnel-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tunnel", "http", "proxy", "async"]
categories = ["network-programming", "web-programming"]
description = "HTTP ingress and proxy implementation for FerroTunnel"

[dependencies]
ferrotunnel-core = { version = "1.0.6", path = "../ferrotunnel-core" }
ferrotunnel-protocol = { version = "1.0.6", path = "../ferrotunnel-protocol" }
ferrotunnel-plugin = { version = "1.0.6", path = "../ferrotunnel-plugin" }
ferrotunnel-common = { version = "1.0.6", path = "../ferrotunnel-common" }
tokio = { workspace = true }
hyper = { version = "1", features = ["full", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full", "server-auto", "tokio"] }
bytes = { workspace = true }
tracing = "0.1"
uuid = { workspace = true }
futures = "0.3"
tower = { version = "0.5", features = ["full"] }
tower-service = "0.3"
thiserror = { workspace = true }
ferrotunnel-observability = { version = "1.0.6", path = "../ferrotunnel-observability", optional = true }

[features]
metrics = ["dep:ferrotunnel-observability"]

[lints]
workspace = true
