[package]
name = "ferrotunnel-observability"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Observability infrastructure for FerroTunnel (Metrics & Tracing)"
keywords = ["tunnel", "observability", "metrics", "tracing", "opentelemetry"]
categories = ["network-programming"]
# Ensure dashboard module and static assets are included in the package (for rust-embed when feature "dashboard" is enabled)
include = ["src/**", "Cargo.toml", "README.md"]

[dependencies]
ferrotunnel-common = { version = "1.0.6", path = "../ferrotunnel-common" }
anyhow = { workspace = true }

# Metrics
prometheus = { version = "0.14", features = ["process"] }

# Tracing & OpenTelemetry
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Request IDs
uuid = { workspace = true }

# Web (for metrics endpoint and dashboard)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "fs",
], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
reqwest = { version = "0.13.1", features = ["json"] }

rust-embed = { version = "8.5", optional = true }
mime_guess = { version = "2.0", optional = true }

# Using custom lints to allow unwrap in metrics initialization
[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
single_match_else = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
match_same_arms = "allow"
needless_continue = "allow"
ignored_unit_patterns = "allow"
unnecessary_literal_bound = "allow"
module_name_repetitions = "allow"
# Allow unwrap for LazyLock metric registration
unwrap_used = "allow"
expect_used = "allow"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"

[features]
default = []
axum = ["dep:axum"]
dashboard = [
    "axum",
    "dep:tower-http",
    "dep:tokio-stream",
    "dep:rust-embed",
    "dep:mime_guess",
]
