[package]
name = "ferrotunnel-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plugin system for FerroTunnel"
keywords = ["plugin", "tunnel", "networking", "extensible"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = "1.1"
tokio = { workspace = true }
governor = "0.10"
form_urlencoded = "1"

[dev-dependencies]
tracing-subscriber = "0.3"

[lints]
workspace = true
